# guardrails-hub-monorepo

./: .env.example  .gitignore  .licenses-allow.txt  .licenses-exceptions.txt  CLAUDE.md  README.md  VALIDATORS.md
.github/: dependabot.yml
.github/workflows/: bootstrap_publish.yml  validators_pr_qc.yml  validators_publish.yml
african_compliance/py/: README.md  pyproject.toml
african_pii/py/: README.md  pyproject.toml
agent_memory_guard/py/: Makefile  README.md  pyproject.toml
agent_memory_guard/py/src/guardrails_ai/agent_memory_guard/: __init__.py  main.py
agent_memory_guard/py/tests/: test_main.py
ban_list/py/: README.md  pyproject.toml
bert_toxic/py/: README.md  pyproject.toml
bias_check/py/: README.md  pyproject.toml
bias_check/py/src/guardrails_ai/bias_check/: __init__.py  main.py  post_install.py
bias_check/py/tests/: test_main.py
competitor_check/py/: README.md  pyproject.toml
competitor_check/py/src/guardrails_ai/competitor_check/: __init__.py  app_inference_spec.py  main.py  post_install.py
competitor_check/py/tests/: conftest.py  test_main.py  unit_tests.py
contains_string/py/: README.md  pyproject.toml
cucumber_expression_match/py/: README.md  pyproject.toml
detect_jailbreak/py/: .env.example  README.md  pyproject.toml  pyrightconfig.json
detect_pii/py/: README.md  pyproject.toml
detect_pii/py/src/guardrails_ai/detect_pii/: __init__.py  app_inference_spec.py  main.py  post_install.py
detect_pii/py/tests/: test_main.py
detect_prompt_injection/py/: .env.example  README.md  pyproject.toml
detect_prompt_injection/py/src/guardrails_ai/detect_prompt_injection/: main.py
detect_prompt_injection/py/tests/: test_main.py
detect_system_prompt_leakage/py/: Makefile  README.md  pyproject.toml
endpoint_is_reachable/py/: README.md  pyproject.toml
ends_with/py/: README.md  pyproject.toml
exclude_sql_predicates/py/: README.md  pyproject.toml
extracted_summary_sentences_match/py/: .env.example  README.md  pyproject.toml
gibberish_text/py/: README.md  pyproject.toml
guardrails_pii/py/: README.md  pyproject.toml
has_url/py/: README.md  pyproject.toml
has_url/py/src/guardrails_ai/has_url/: main.py
has_url/py/tests/: test_main.py
internal_domains/py/: README.md  pyproject.toml
llamaguard_7b/py/: README.md  pyproject.toml
llm_critic/py/: .env.example  README.md  pyproject.toml
logic_check/py/: README.md  pyproject.toml
lowercase/py/: README.md  pyproject.toml
mentions_drugs/py/: README.md  pyproject.toml
nsfw_text/py/: README.md  pyproject.toml
one_line/py/: README.md  pyproject.toml
politeness_check/py/: .env.example  README.md  pyproject.toml
presidio_gliner_pii/py/: README.md  pyproject.toml  pyrightconfig.json
presidio_gliner_pii/py/src/guardrails_ai/presidio_gliner_pii/: __init__.py  analyzer_engine.py  app_inference_spec.py  gliner_recognizer.py  main.py
presidio_gliner_pii/py/tests/: test_main.py
profanity_free/py/: README.md  pyproject.toml
prompt_injection_detector/py/: .env.example  README.md  pyproject.toml
prompt_injection_detector/py/src/guardrails_ai/prompt_injection_detector/: main.py
prompt_injection_detector/py/tests/: test_main.py
provenance_embeddings/py/: README.md  pyproject.toml
provenance_llm/py/: .env.example  README.md  pyproject.toml
provenance_llm/py/src/guardrails_ai/provenance_llm/: __init__.py  main.py
provenance_llm/py/tests/: test_main.py
provenance_nli/py/: .env.example  README.md  pyproject.toml
qa_relevance_llm_eval/py/: .env.example  README.md  pyproject.toml
qa_relevance_llm_eval/py/src/guardrails_ai/qa_relevance_llm_eval/: main.py
qa_relevance_llm_eval/py/tests/: test_main.py
quotes_price/py/: README.md  pyproject.toml
reading_level/py/: README.md  pyproject.toml
reading_level/py/tests/: test_main.py
reading_time/py/: README.md  pyproject.toml
redundant_sentences/py/: README.md  pyproject.toml
regex_match/py/: README.md  pyproject.toml
relevancy_evaluator/py/: .env.example  README.md  pyproject.toml
relevancy_evaluator/py/src/guardrails_ai/relevancy_evaluator/: main.py
relevancy_evaluator/py/tests/: test_main.py
response_evaluator/py/: .env.example  README.md  pyproject.toml
responsiveness_check/py/: .env.example  README.md  pyproject.toml
restricttotopic/py/: README.md  pyproject.toml  pyrightconfig.json
restricttotopic/py/src/guardrails_ai/restricttotopic/: main.py
restricttotopic/py/tests/: test_main.py
saliency_check/py/: .env.example  README.md  pyproject.toml
scripts/: generate_locks.sh
secrets_present/py/: README.md  pyproject.toml
secrets_present/py/src/guardrails_ai/secrets_present/: main.py
secrets_present/py/tests/: test_main.py
sensitive_topics/py/: README.md  pyproject.toml
shieldgemma_2b/py/: README.md  pyproject.toml
shieldgemma_2b/py/src/guardrails_ai/shieldgemma_2b/: main.py
shieldgemma_2b/py/tests/: test_main.py
similar_to_document/py/: README.md  pyproject.toml
similar_to_previous_values/py/: .env.example  README.md  pyproject.toml
similar_to_previous_values/py/src/guardrails_ai/similar_to_previous_values/: main.py  post_install.py
similar_to_previous_values/py/tests/: test_main.py
sky_validator/py/: README.md  pyproject.toml  pyrightconfig.json
sky_validator/py/src/guardrails_ai/sky_validator/: __init__.py  main.py
sky_validator/py/tests/: test_main.py
toxic_language/py/: README.md  pyproject.toml
toxic_language_llm/py/: README.md  pyproject.toml
toxic_language_llm/py/src/guardrails_ai/toxic_language_llm/: __init__.py  main.py
toxic_language_llm/py/tests/: test_main.py
two_words/py/: README.md  pyproject.toml
unusual_prompt/py/: .env.example  README.md  pyproject.toml
uppercase/py/: README.md  pyproject.toml
valid_address/py/: .env.example  README.md  pyproject.toml
valid_choices/py/: README.md  pyproject.toml
valid_html/py/: README.md  pyproject.toml
valid_html/py/src/guardrails_ai/valid_html/: __init__.py  main.py
valid_html/py/tests/: test_main.py
valid_sql/py/: README.md  pyproject.toml
valid_sql/py/tests/: test_main.py
(+129 files in other folders)
