[project]
name = "guardrails-ai-agent-memory-guard"
version = "0.1.0"
authors = [
    {name = "Gautam Kishore"},
    {name = "Guardrails AI"}
]
license = "MIT"
description = "OWASP ASI06 memory-poisoning guard: scans LLM output for prompt injection, jailbreaks, structural anomalies, and sensitive-data leakage before it is written to agent memory."
readme = "README.md"
requires-python = ">= 3.10,<4"
dependencies = [
    "guardrails-ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage>=7.6.12",
    "pyright[nodejs]>=1.1.396",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://guardrailsai.com"
Repository = "https://github.com/guardrails-ai/guardrails-hub-monorepo/tree/main/agent_memory_guard/py"
Documentation = "https://guardrails-ai.github.io/guardrails-hub-monorepo/autoapi/guardrails_ai/agent_memory_guard/index.html"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [".git", ".venv", "build", "dist", "node_modules", "site-packages"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
