[project]
name = "guardrails-ai-bias-check"
version = "0.4.1a1"
authors = [
    {name = "Guardrails AI"}
]
license = "MIT"
description = "Validates that the text is free from biases related to age, gender, sex, ethnicity, religion, etc."
readme = "README.md"
requires-python = ">= 3.10,<4"
dependencies = [
    "guardrails-ai>=0.5.15",
    "transformers>=4.37.0,<5.0",
    "tf-keras",
    "sentencepiece",
    "tensorflow>=2.16.0",
    "sentence-splitter>=1.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage>=7.6.12",
    "pyright[nodejs]>=1.1.396",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://guardrailsai.com"
Repository = "https://github.com/guardrails-ai/guardrails-hub-monorepo/tree/main/bias_check/py"
Documentation = "https://github.com/guardrails-ai/guardrails-hub-monorepo/blob/main/bias_check/py/README.md"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [".git", ".venv", "build", "dist", "node_modules", "site-packages"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
