[project]
name = "guardrails-ai-restrict-to-topic"
version = "0.1.0"
authors = [
    {name = "Tryolabs"}
]
license = "Apache-2.0"
description = "Checks that a text stays on a set of valid topics and avoids invalid ones."
readme = "README.md"
requires-python = ">= 3.10,<4"
dependencies = [
    "guardrails-ai>=0.4.0",
    "pydantic>=2.4.2",
    "tenacity>=8.1.0",
    "transformers>=4.11.3",
    "torch>=2.1.1",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage>=7.6.12",
    "pyright[nodejs]>=1.1.396",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://guardrailsai.com"
Repository = "https://github.com/guardrails-ai/guardrails-hub-monorepo/tree/main/restricttotopic/py"
Documentation = "https://github.com/guardrails-ai/guardrails-hub-monorepo/blob/main/restricttotopic/py/README.md"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [".git", ".venv", "build", "dist", "node_modules", "site-packages"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
